updating the framework and adding more tests